[package]
name = "turso-mappers"
version = "0.1.0"
edition = "2024"
description = "Row mappers for turso"
license = "MIT"
repository = "https://github.com/stevewillcock/turso-binding-mappers"


[dependencies]
turso = { version = "0.1.1" }
turso-mappers-derive = { version = "0.1.0", path = "turso-mappers-derive" }



[dev-dependencies]
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["rt", "macros", "test-util", "rt-multi-thread"] }
turso_core = "0.1.1"
